--- a/docs/checks/internal/checks.yaml
+++ b/docs/checks/internal/checks.yaml
@@ -283,6 +283,16 @@ checks:
     remediation:
       - >-
         Sign up for the [OpenSSF Best Practices program](https://www.bestpractices.dev/).
+  Appseq:
+    risk: High
+    tags: security
+    repos: GitHub, local
+    short: Determines if the project has an APPSEC.md file present
+    description: |
+      Risk: `High` (possible unknown vulnerabilities)
+    remediation:
+      - >-
+        Create an APPSEC.md file
   Code-Review:
     risk: High
     tags: supply-chain, security, source-code, code-reviews
